--- a/mainstyle.css
+++ b/mainstyle.css
@@ -1,26 +1,33 @@
 body {
-	background-color: white;
-	padding: 0;
-	margin: 0;
-	/*overflow-x: hidden;*/
+    background-color: white;
+    padding: 0;
+    margin: 0;
+    /*overflow-x: hidden;*/
 }
 
 /* Header */
 #top_page_nav {
-	height: 100px;
-	background: url('images/demonkings_navheader.png') top center no-repeat;
+    height: 100px;
+    width: 99vw;
+    background: url('images/demonkings_navheader.png') top center no-repeat;
 }
 
 #top_logo {
-	height: 84px;
+    height: 84px;
     width: 490px;
     margin: auto;
     display: block;
-	background: url('images/demonkings_mainlogo.png') top center no-repeat;
+    background: url('images/demonkings_mainlogo.png') top center no-repeat;
+}
+
+#top_logo:hover {
+    height: 100px;
+    width: 99vw;
+    background: url('images/demonkings_mainlogo.png') top center no-repeat, url('images/demonkings_navheader_on.png') top center no-repeat;
 }
 
 #top_database {
-	height: 100px;
+    height: 100px;
     width: 48%;
     position: absolute;
     top: 0;
@@ -29,7 +36,7 @@ body {
 }
 
 #top_archive {
-	height: 100px;
+    height: 100px;
     width: 50%;
     position: absolute;
     top: 0;
@@ -39,15 +46,15 @@ body {
 }
 
 #header_top_hive {
-	height: 90px;
-	margin: 4px;
-	padding: 0;
-	background: url('images/demonkings_top_hive.png') center center no-repeat;
+    height: 90px;
+    margin: 4px;
+    padding: 0;
+    background: url('images/demonkings_top_hive.png') center center no-repeat;
 }
 
 /* Main Body */
 #main_comic_center {
-	height: 1537px;
+    height: 1537px;
     width: 1014px;
     margin: auto;
     position: relative;
@@ -56,7 +63,7 @@ body {
 }
 
 #blank_page {
-	height: 1350px;
+    height: 1350px;
     width: 100%;
     position: absolute;
     top: 24px;
@@ -80,9 +87,9 @@ body {
     height: 1084px;
     width: 184px;
     position: absolute;
-    top: 190px;
-    right: 172px;
-    background: url('images/demonkings_char_bios_placeholder.png') no-repeat top right;
+    top: 0;
+    right: -205px;
+    background: url('images/demonkings_char_bios_placeholder.png') top center no-repeat;
 }
 
 /* Chapter Navigation */
@@ -97,7 +104,7 @@ body {
 }
 
 #chapter_nav_left {
-	height: 526px;
+    height: 526px;
     width: 53px;
     background: url('images/demonkings_chaptertabs_base.png') top right no-repeat;
 }
