--- a/mainstyle.css
+++ b/mainstyle.css
@@ -51,7 +51,6 @@ body {
     width: 1014px;
     margin: auto;
     position: relative;
-    z-index: -1;
     background: url('images/demonkings_page_frame.png') top center no-repeat;
 }
 
@@ -63,7 +62,6 @@ body {
     left: 26px;
     margin: auto;
     padding: 0;
-    z-index: -1;
     background: url('images/demonkings_blank_page.png') center center no-repeat;
 }
 
@@ -80,8 +78,8 @@ body {
     height: 1084px;
     width: 184px;
     position: absolute;
-    top: 190px;
-    right: 172px;
+    top: 0;
+    right: -200px;
     background: url('images/demonkings_char_bios_placeholder.png') no-repeat top right;
 }
 
@@ -122,27 +120,66 @@ body {
 }
 
 #first_button {
+    height: 90px;
+    width: 90px;
     display: inline-block;
     float: left;
-    background: url('images/');
+}
+
+#first_button:hover {
+    height: 90px;
+    width: 90px;
+    display: inline-block;
+    float: left;
+    background: url('images/demonkings_first_button_on.png') no-repeat;
 }
 
 #prev_button {
+    height: 90px;
+    width: 90px;
+    margin-left: 17px;
     display: inline-block;
     float: left;
-    background: url('images/');
+}
+
+#prev_button:hover {
+    height: 90px;
+    width: 90px;
+    display: inline-block;
+    float: left;
+    background: url('images/demonkings_prev_button_on.png') no-repeat;
 }
 
 #next_button {
+    height: 90px;
+    width: 90px;
+    margin-left: 17px;
     display: inline-block;
     float: left;
-    background: url('images/');
+}
+
+#next_button:hover {
+    height: 90px;
+    width: 90px;
+    display: inline-block;
+    float: left;
+    background: url('images/demonkings_next_button_on.png') no-repeat;
 }
 
 #last_button {
+    height: 90px;
+    width: 90px;
+    margin-left: 17px;
     display: inline-block;
     float: left;
-    background: url('images/');
+}
+
+#last_button:hover {
+    height: 90px;
+    width: 90px;
+    display: inline-block;
+    float: left;
+    background: url('images/demonkings_current_button_on.png') no-repeat;
 }
 
 /* Other Page Navigation */
