--- a/mainstyle.css
+++ b/mainstyle.css
@@ -5,13 +5,16 @@ body {
 	/*overflow-x: hidden;*/
 }
 
+table { empty-cells: show; }
+
 /* Header */
 #top_page_nav {
 	height: 100px;
     min-width: 1000px;
     width: 100%;
     display: table;
-	/*background: url('images/demonkings_navheader.png') top center no-repeat;*/
+    margin: 0;
+    padding: 0;
 }
 
 .top_logo {
@@ -19,6 +22,7 @@ body {
     width: 605px;
     margin: auto;
     display: table-cell;
+    vertical-align: top;
 	background: url('images/demonkings_header_center.png') top center no-repeat;
 }
 
